# claustre

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  deny.toml
.claude/hooks/: _claustre-common.sh  stop-hook.sh
.githooks/: pre-commit
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  release.yml
app/src/: index.html  main.js  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
docs/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
docs/plans/: 2026-02-08-claustre-design.md  2026-02-08-rate-limit-awareness-design.md  2026-02-08-rate-limit-awareness-plan.md  2026-02-08-skills-integration-design.md  2026-02-08-skills-integration.md  2026-02-08-tui-crud-operations.md  2026-02-10-ux-improvements.md  2026-02-14-atomicity-fixes.md  2026-02-14-subtasks-design.md  2026-02-14-subtasks-plan.md  2026-02-14-task-driven-sessions-design.md  2026-02-14-task-driven-sessions-plan.md  2026-02-15-claude-task-progress-design.md  2026-02-15-claude-task-progress-plan.md  2026-02-15-cmux-lessons.md  2026-02-15-live-session-stats-design.md  2026-02-15-task-centric-session-detail-design.md  2026-02-15-task-centric-session-detail-plan.md  2026-02-16-auto-resume-in-review-design.md  2026-02-16-auto-resume-in-review-plan.md  2026-02-16-native-terminal-embedding-design.md  2026-02-16-native-terminal-embedding-plan.md  2026-02-16-unified-tui-design.md  2026-02-16-unified-tui-plan.md  2026-02-17-decouple-sessions-design.md  2026-02-17-decouple-sessions-plan.md  2026-03-02-render-phase-scrollback-design.md  2026-03-02-render-phase-scrollback-plan.md  2026-03-08-code-review-fixes-plan.md  2026-03-08-deep-code-review-and-feature-ideation.md  2026-03-08-refactor-large-files.md
docs/public/: CNAME  install.sh
docs/src/components/: CodeBlock.astro  FeatureCard.astro  Footer.astro  Header.astro  Nav.astro  Sidebar.astro
docs/src/layouts/: BaseLayout.astro  DocsLayout.astro
docs/src/pages/: architecture.astro  cli.astro  configuration.astro  desktop-app.astro  getting-started.astro  index.astro  sync.astro  tasks.astro  tui.astro
docs/src/styles/: global.css
docs/superpowers/plans/: 2026-03-16-enhance-github-board.md
docs/superpowers/specs/: 2026-03-15-auto-push-sync-design.md  2026-03-15-task-storage-hierarchy-design.md
src/: configure.rs  github.rs  lib.rs  main.rs  session_host.rs  session_update.rs  shell_init.sh  sync.rs  update.rs
src/config/: mod.rs
src/mcp/: mod.rs
src/pty/: embedded.rs  layout.rs  mod.rs  protocol.rs  selection.rs  session_terminals.rs  widget.rs
src/scanner/: mod.rs
src/session/: mod.rs
src/skills/: mod.rs
src/store/: mod.rs  models.rs  queries.rs
src/store/queries/: external_sessions.rs  mod.rs  projects.rs  rate_limits.rs  sessions.rs  stats.rs  subtasks.rs  sync.rs  tasks.rs
src/tui/: app.rs  event.rs  form.rs  keymap.rs  mod.rs  theme.rs  ui.rs
src/tui/app/: data_refresh.rs  event_loop.rs  initialization.rs  input.rs  mod.rs  polling.rs  pty_management.rs  session_lifecycle.rs
src/tui/ui/: board.rs  dashboard.rs  forms.rs  mod.rs  overlays.rs  session.rs  tab_bar.rs  usage.rs
