[package]
name = "claustre"
version = "0.1.0"
edition = "2024"
description = "A TUI for orchestrating multiple Claude Code sessions across projects"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = "1"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
