[package]
name = "claustre"
version = "0.1.0"
edition = "2024"
description = "A TUI for orchestrating multiple Claude Code sessions across projects"
license = "MIT"

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = "1"
regex = "1"
portable-pty = "0.8"
vt100 = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
arboard = "3"
libc = "0.2"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
redundant_clone = "deny"
needless_collect = "deny"
# Pedantic lints that are too noisy for this project
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
unnecessary_wraps = "allow"
too_many_lines = "allow"
trivially_copy_pass_by_ref = "allow"
struct_excessive_bools = "allow"

[dev-dependencies]
tempfile = "3"
