[package]
name = "claustre-app"
version = "0.1.0"
edition = "2024"
description = "Native macOS desktop app for claustre"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
claustre = { path = "../.." }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
struct_excessive_bools = "allow"

[dev-dependencies]
tempfile = "3"
